@@ -15,6 +15,9 @@
 	added an mssqlserver error map for the mysql drop-in library
 	fixed a memory leak in the freetds version-checking code
 	added /resources/index as a search path for syllable
+	added support for null-terminated bind variable lists to the mysql
+		drop-in library so apps can optionally bind fewer columns than
+		come back in the result set
 
 0.49 - fixed various issues that came up when cross-compiling
 	fixed make uninstall to remove a few things that it missed
